Cleanup, validate generated brew types